# SyncTool

./: .gitignore  BUILD.txt  CMakeLists.txt  LICENSE.txt  README.txt  SYNC.txt  TODO.txt  makefile  premake5.lua
sources/: dirent.cpp  lowlevel.cpp  main.cpp  mydirent.h  native_lnx.cpp  native_win.cpp  synctool.cpp  synctool.h  util.cpp  windows.cpp
sources/linux/: dirent.cpp  lowlevel.cpp  native.cpp  synctool.cpp  synctool.h  util.cpp
sources/windows/: lowlevel.cpp  main.cpp  synctool.cpp  synctool.h  util.cpp  vsdirent.cpp  vsdirent.h  windows.cpp
